# openbar-notifier

./: .env  .gitignore  Cargo.toml  README.md
docs/: bar.config.json  bar.mini.openapi.yml  filterOAPI.py
openbar-api/: Cargo.toml  README.md
openbar-api/.openapi-generator/: FILES
openbar-api/src/apis/: accounts_api.rs  auth_api.rs  categories_api.rs  configuration.rs  items_api.rs  mod.rs
openbar-api/src/models/: account.rs  account_price_role.rs  account_restrictions.rs  account_role.rs  account_state.rs  category.rs  connect_card_200_response.rs  connect_card_request.rs  connect_password_request.rs  error_codes.rs  fournisseur.rs  get_category_items_200_response.rs  http_error.rs  item.rs  item_prices.rs  item_state.rs  menu_category.rs  menu_item.rs  messages.rs  mod.rs
openbar-notifier/: Cargo.toml
openbar-notifier/src/: config.rs  event.rs  lib.rs  main.rs  store.rs
openbar-notifier/src/openbar/: client.rs  mod.rs  webconfig.rs
