[package]
name = "openbar-notifier"
version = "0.1.0"
edition = "2024"
authors = ["FuseTim"]

[dependencies]
"openbar-api" = { path = "../openbar-api" }
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.0", features = ["full"] }