[package]
name = "openbar-notifier"
version = "0.1.0"
edition = "2024"
authors = ["FuseTim"]

[dependencies]
"openbar-api" = { path = "../openbar-api" }
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "cookies", "rustls-tls", "http2", "charset"] }
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
rustls = { version = "0.23" }
webpki-roots = "1"